[package]
name = "ttrace"
version = "0.1.2"
edition = "2021"
description = "trace the time for tasks for a given day."
license = "MIT"
repository = "https://github.com/lukas412/ttrace"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = "4.5.4"
expanduser = "1.2.2"
eyre = "0.6.12"
itertools = "0.12.1"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
termfmt = "0.2.1"
